# origin

./: .gitignore
1_Modul/: FileName1.cpp  HOMEWORK.sln  HW.1.61..cpp  HW1.10.1+.cpp  HW1.10.2.cpp  HW1.10.3.cpp  HW1.11.1.cpp  HW1.11.2.cpp  HW1.12.1.cpp  HW1.12.2.cpp  HW1.12.3.cpp  HW1.12.4.cpp  HW1.5.3.cpp  HW1.5.4.cpp  HW1.6.2.cpp  HW1.6.3+.cpp  HW1.6.3.cpp  HW1.7.1.cpp  HW1.7.2+.cpp  HW1.7.2.cpp  HW1.8.1.cpp  HW1.8.2.cpp  HW1.9.1.cpp  HW1.9.2.cpp  HW1.9.3.cpp  Homework1.3.1.cpp  Homework1.3.2+.cpp  Homework1.3.2.cpp  Homework1.4.1.cpp  Homework1.4.2.cpp  Homework1.4.3.cpp  Homework1.5.1.cpp  Homework1.5.2.cpp  KURSr#1.cpp  Kurs#1_compress.cpp  homework1.3.3.cpp  homework1.3.4.cpp  in.txt  out.txt
1_Modul/LIFE/: KURSr#1.cpp  LIFE.sln  LIFE.vcxproj  LIFE.vcxproj.filters  life.cpp
2_Modul/L11_Сборка библиотек/: cmake
2_Modul/L11_Сборка библиотек/L11_Task3_CM_DLL/lib/: CMakeLists.txt  leaver.cpp  leaver.h
2_Modul/L11_Сборка библиотек/L11_Task5_CM/lib/: CMakeLists.txt  figure.h  is_trian.h  quadr.cpp  r_trian.h  trian.h
3_Modul/L4_Деки_динамич массив/: readme.md
5_Modul/L1_Введение в БД/: readme.md
5_Modul/L2_Работа с Postgresql/: 133.drawio  homework.sql  raadme.md  tables.sql  Задание1.txt  Задание2.txt
5_Modul/L3_Select_запросы_выборки/: SELECT.md
5_Modul/L4_Выборка из нескольких таблиц/: create.sql  insert.sql  readme_sol.txt  Задание2.sql  Задание3.sql  Задание4.sql
5_Modul/L5_PostgreSQL из С++/: CMakeLists.txt  main.cpp  readme.md
8_Modul/05_SignalSlot/: 05_SignalSlot.rar  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  signals.cpp  signals.h
8_Modul/06_Qconcurrent/: 06_ExampConcurr.rar  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
8_Modul/Kursovoy/: readme.md  Инспектор аэропортов. Спецификация требований к ПО..docx
8_Modul/L10_TCP/: mainwindow.cpp  structs.h  tcpclient.cpp  tcpclient.h
8_Modul/L2_SQLconsole/: CMakeLists.txt
8_Modul/L3_QT_designer/: CMakeLists.txt  connect.cpp  connect.h  connect.ui  dialog.cpp  dialog.h  dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
8_Modul/L4_Widget/: CMakeLists.txt  CMakeLists.txt.user.8cd3117  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
8_Modul/L5_Stopwatch/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  watch.cpp  watch.h
8_Modul/L6_Qconcurrent/: ExampleRace.h  mainwindow.cpp
8_Modul/L7_Grafic/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
8_Modul/L8_SQL/: CMakeLists.txt  CMakeLists.txt.user.8cd3117  database.cpp  database.h  dbdata.cpp  dbdata.h  dbdata.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
8_Modul/L9_UDP/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp  udpworker.h
8_Modul/SQLconsole/: main.cpp
8_Modul/build-L3_QT_designer-Descktop_Qt_6_4_2_mingw_64-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
8_Modul/build-L4_Widget-Descktop_Qt_6_4_2_mingw_64-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
8_Modul/build-L7_Grafic-Descktop_Qt_6_4_2_mingw_64-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
8_Modul/build-L8_SQL-Descktop_Qt_6_4_2_mingw_64-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
9_Modul/: README.md
9_Modul/01/: Task1.cpp  Task1_diagram.json  Task2.cpp  Task2_diagram.json  Task3.cpp  Task3_diagram.json  readme.md
9_Modul/02/: Task1.cpp  Task1_diagram.json  Task1_libraries.txt  Task2.cpp  Task2_diagram.json  Task3.cpp  readme.md
9_Modul/03/: Task1.cpp  Task1_diagram.json  Task2.cpp  Task2_diagram.json  Task3.cpp  Task3_diagram.json  Task3_libraries.txt  readme.md
9_Modul/04/: Task1.cpp  Task1_diagram.json  Task2.cpp  Task2_diagram.json  Task2_libraries.txt  Task3.cpp  Task3_diagram.json  readme.md
9_Modul/05/: Task1.cpp  Task1_diagram.json  Task2.cpp  Task2_diagram.json  Task3.cpp  Task3_diagram.json  readme.md
9_Modul/06/: Task1.cpp  Task1_diagram.json  Task1_libraries.txt  Task2.cpp  Task2_diagram.json  readme.md
9_Modul/07/: Task1.cpp  Task1_diagram.json  Task1_libraries.txt  Task2.cpp  Task2_diagram.json  Task2_menegmentStepEngine.cpp  Task2_menegmentStepEngine.h  Task3.cpp  Task3_diagram.json  readme.md
9_Modul/08/: Task1.cpp  Task1_diagram.json  Task1_libraries.txt  Task2.cpp  Task2_diagram.json  Task3.cpp  Task3_diagram.json  readme.md
9_Modul/09/: Task1.cpp  Task1_diagram.json  Task2.cpp  Task2_diagram.json  Task2_libraries.txt  Task2_wokwi.txt  readme.md
9_Modul/10/: Task1.cpp  Task1_DTH6.cpp  Task1_DTH6.h  Task1_diagram.json  Task1_libraries.txt  readme.md
9_Modul/11/: Task1.cpp  Task1_diagram.json  Task2.cpp  Task2_diagram.json  Task2_libraries.txt  readme.md
L10_CMake/L10_Task1/: L10_Task1.vcxproj  L10_Task1.vcxproj.filters
L10_CMake/L10_Task1_CM/: CMakeLists.txt
L10_CMake/L10_Task2/: Task3.cpp  paral.cpp  quadr.h
L10_CMake/L10_Task2_CM/: r_trian.h
L11_Сборка библиотек/: cmake
L11_Сборка библиотек/L11_Task1/: L11_Task1.cpp  L11_Task1.sln  L11_Task1.vcxproj  L11_Task1.vcxproj.filters
L11_Сборка библиотек/L11_Task1_CM/: CMakeLists.txt  source.cpp
L11_Сборка библиотек/L11_Task3_CM_DLL/: CMakeLists.txt
L11_Сборка библиотек/L11_Task3_CM_DLL/lib/: leaver.h
Lesson1/: Task1.cpp
Lesson6/Task1/: func.h  (+3 more)
diplom/: index.html  settings.ini
diplom/diplom/: 11index.html  CMakeLists.txt  index.html  index2.html  main.cpp  readme.md  settings.ini  xgconsole.xml  ссс
diplom/diplom/include/: bd.h  except.h  globals.h  httpclient.h  httpserver.h  indexator.h  safequeue.h  tempfile.h
diplom/diplom/src/: BoostLocale.cpp  XPath.cpp  bd.cpp  client.cpp  config.ini  except.cpp  exceptd.cpp  httpclient.cpp  httpserver.cpp  httpserver.h  indexator.cpp  main.cpp  parserhtml.cpp  parserini.cpp  safequeue.cpp  tempfile.cpp  test.cpp  test1.cpp
diplom/httpclient/: CMakeLists.txt  httpcl.cpp  httpcl.h  httpclient.cpp  indexator.cpp  xgconsole.xml
diplom/locale/: CMakeLists.txt  httpclient.cpp  indexator.cpp  indexatorboost.cpp
diplom/server/: CMakeLists.txt
diplom/server/include/: bd.h  httpserver.h  parserini.h
diplom/server/src/: bd.cpp  httpserver.cpp  main.cpp  parserini.cpp
(+1466 files in other folders)
